kubernetes/stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-panel-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solar-panel-web
  template:
    metadata:
      labels:
        app: solar-panel-web
    spec:
      containers:
        - name: solar-panel-web
          image: gcr.io/non-prod-environments/solar-panel-web-be:latest
          ports:
            - containerPort: 8080
