kubernetes/stage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-panel-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: solar-panel-web
